<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        android:layout_margin="16dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_cardContent"
            android:layout_width="match_parent"
            android:layout_height="239dp">


            <ImageView
                android:id="@+id/image"
                android:layout_width="248dp"
                android:layout_height="134dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/hb20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_cardContent" />

            <TextView
                android:id="@+id/tv_preco"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Preço :"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <TextView
                android:id="@+id/tv_preco_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/preco_value"
                app:layout_constraintStart_toEndOf="@+id/tv_preco"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <TextView
                android:id="@+id/tv_bateria"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bateria"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:text="@string/consumo_value"
                app:layout_constraintStart_toEndOf="@+id/tv_bateria"
                app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

            <TextView
                android:id="@+id/tv_potencia"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/potencia"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bateria" />

            <TextView
                android:id="@+id/tv_recarga"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recarga"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_potencia" />

            <TextView
                android:id="@+id/tv_potencia_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/consumoValueEstrada"
                app:layout_constraintBaseline_toBottomOf="@id/cl_cardContent"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                app:layout_constraintTop_toBottomOf="@+id/tv_bateria_value" />

            <TextView
                android:id="@+id/tv_recargaValue"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recargaValue"
                android:layout_marginLeft="16dp"
                app:layout_constraintBaseline_toBottomOf="@id/cl_cardContent"
                app:layout_constraintStart_toEndOf="@+id/tv_recarga"
                app:layout_constraintTop_toBottomOf="@+id/tv_potencia_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>